[gd_scene load_steps=12 format=3 uid="uid://bi68a6b5rjjg5"]

[ext_resource type="Texture2D" uid="uid://d174cm6pe1dyb" path="res://assets/parametre.png" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://caxbxgvsn8xcw" path="res://scripts/parametre/settings.gd" id="1_dybpc"]
[ext_resource type="FontFile" uid="uid://b7ua41mspaxmj" path="res://data/LilitaOne-Regular.ttf" id="2_es4n0"]
[ext_resource type="Texture2D" uid="uid://sbgkjsicsfpo" path="res://assets/slider control.png" id="3_gis3k"]
[ext_resource type="Texture2D" uid="uid://sogvkm5nxf2o" path="res://assets/slider control-1.png" id="4_83j8s"]
[ext_resource type="Texture2D" uid="uid://cbuqtbcynl8m8" path="res://assets/Grabber.png" id="5_gjs24"]

[sub_resource type="Theme" id="Theme_r6d6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wm04"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am25x"]
bg_color = Color(0.827451, 0.827451, 0.827451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ppmf"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhhto"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 68.0
offset_right = -168.0
offset_bottom = -315.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dybpc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 111.0
offset_right = 316.0
offset_bottom = 173.0
theme_override_constants/separation = 8

[node name="parametre" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_r6d6q")
texture_normal = ExtResource("1_5p8wc")

[node name="QuitDialogPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 184.0
offset_right = 708.0
offset_bottom = 405.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6wm04")

[node name="CloseButton" type="Button" parent="QuitDialogPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_top = -1.0
offset_right = -4.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 38
text = "X"

[node name="Musique" type="VBoxContainer" parent="QuitDialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0352609
anchor_top = 0.264957
anchor_right = 0.280374
anchor_bottom = 0.726496
offset_left = -1.00001
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="QuitDialogPanel/Musique"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_es4n0")
theme_override_font_sizes/font_size = 40
text = "Musique"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider1" type="HSlider" parent="QuitDialogPanel/Musique"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_gis3k")
theme_override_icons/grabber_highlight = ExtResource("4_83j8s")
theme_override_icons/grabber_disabled = ExtResource("5_gjs24")
theme_override_styles/slider = SubResource("StyleBoxFlat_am25x")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_4ppmf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_uhhto")
max_value = 10.0
metadata/_edit_use_anchors_ = true

[node name="EffetsSonores" type="VBoxContainer" parent="QuitDialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416148
anchor_top = 0.219519
anchor_right = 0.826516
anchor_bottom = 0.692308
offset_left = 87.9511
offset_top = -1.36749
offset_right = 40.0
offset_bottom = -4.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="QuitDialogPanel/EffetsSonores"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_es4n0")
theme_override_font_sizes/font_size = 40
text = "Effets sonores"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider1" type="HSlider" parent="QuitDialogPanel/EffetsSonores"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_gis3k")
theme_override_icons/grabber_highlight = ExtResource("4_83j8s")
theme_override_icons/grabber_disabled = ExtResource("5_gjs24")
theme_override_styles/slider = SubResource("StyleBoxFlat_am25x")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_4ppmf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_uhhto")
max_value = 10.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="HBoxContainer/parametre" to="." method="_on_parametre_pressed"]
[connection signal="pressed" from="QuitDialogPanel/CloseButton" to="." method="_on_close_button_pressed"]
